--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ title: "圣泉山人"
 email: "zuji666@gmail.com"
 description: "随记"
 github_username:  "myyphp"
-swiftype_searchId: "UuBAqzyarDZNQY6r81xT"
+swiftype_searchId: "imFSM5hHWNq6_9BEzTV_"
 disqus_shortname: "zuji"
 
 
