--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ email: "zuji666@gmail.com"
 description: "随记"
 github_username:  "myyphp"
 swiftype_searchId: "imFSM5hHWNq6_9BEzTV_"
-disqus_shortname: "zuji"
+disqus_shortname: "myyphp"
 
 
 
